fixed overflow-x problem on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1275,4 +1275,12 @@ nav {
     margin: 0;
     padding: 0 0 0 0!important;
   }
+  body{
+     width:100%;
+     height:100%;
+     overflow-x: hidden;
+  }
 } 
+
+
+
